--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,11 @@
         }
     ],
 
+    "options_ui": {
+        "page": "options.html",
+        "browser_style": true
+    },
+
     "browser_specific_settings": {
         "gecko": {
             "id": "xkcd-bookmark@andreassen.info"
